# wilhelmai

./: .example.env  .gitignore  Pipfile  README.md  TODOS.md  Untitled.ipynb  data.csv  db.py  extended_qa.json  gradio_app.py  gradio_app_blocks.py  lib.py  main.ipynb  main.py  pyproject.toml  recs.md  requirements.txt  test_lib.py  test_queries.tsv  test_queries.txt  utils.py
.fh-heroicons/: academic-cap_outline  arrow-right_outline  arrow-top-right-on-square_outline  arrow-up-circle_outline  cube-transparent_outline  information-circle_outline  magnifying-glass_outline  plus_outline  rocket-launch_outline  shield-check_outline  x-mark_outline
data/: test_queries.txt
notebooks/: dspy.ipynb  eval.py  eval_results1.csv  eval_results2.csv  evaluate_retrieval.ipynb  full_retrieval_results.xlsx  kimi_finder.json  main.ipynb  queries.csv  results.json  results_2.json  results_3.json  results_4.json  results_5.json  results_6.json  retrieval_results.xlsx  scratchpad.ipynb  scratchpad2.ipynb  search_terms.csv  test_queries.csv
notes/: NOTES.md  TODOS.md
src/: components.py  lib.py  main.py  utils.py
