[project]
name = "radiopaedia-idea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.45.2",
    "apsw>=3.49.0.0",
    "claudette>=0.1.3",
    "cohere>=5.14.0",
    "cosette>=0.0.4",
    "dspy>=2.6.27",
    "fh-heroicons",
    "httpx>=0.28.1",
    "instructor>=1.7.2",
    "mistletoe>=1.4.0",
    "openpyxl>=3.1.5",
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.5",
    "python-fasthtml>=0.12.1",
    "scikit-learn>=1.7.1",
]

[tool.uv.sources]
fh-heroicons = { git = "https://github.com/vacmar01/fh-heroicons.git" }

[tool.ruff]
target-version = "py312"
